kubernetes/apps/default/additional-ingress/app/tdarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: tdarr.png
    gethomepage.dev/name: Tdarr
    gethomepage.dev/group: Media
    gethomepage.dev/widget.type: tdarr
    gethomepage.dev/widget.url: http://${TDARR_IP}:8265
spec:
  ingressClassName: internal
  rules:
    - host: &host tdarr.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tdarr
subsets:
  - addresses:
      - ip: ${TDARR_IP}
    ports:
      - name: http
        port: 8265
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  ports:
    - name: http
      port: 8265
  type: ClusterIP
